# datarepo

./: .copier-answers-datasets.yml  .copier-answers.yml  .gitignore  .invenio  .invenio.private  .test-runner.sh  LICENSE  README.md  babel.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  invenio.cfg  oarepo.yaml  package.json  pipeline_server_config_template.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run-tests.sh  sample_data.json5  variables
app_data/: communities.yaml  vocabularies.yaml
app_data/vocabularies/: README.md  affiliations.yaml  affiliations_mapping.csv  funders.yaml  funders_mapping.csv  names.yaml
assets/less/site/collections/: form.variables  menu.overrides
assets/less/site/elements/: button.overrides  button.variables  container.overrides  header.overrides  header.variables  input.overrides  input.variables  label.overrides  label.variables
assets/less/site/globals/: site.overrides  site.variables
assets/less/site/modules/: checkbox.overrides  checkbox.variables  dropdown.overrides  dropdown.variables
assets/less/site/views/: card.overrides  (+2 more)
common/: idutils_schemes.py
common/alembic/: datarepo_1_create_datarepo_branch.py  datarepo_2_initial_revision.py
common/resources/: error_handlers.py
common/workflows/: communities.py  default.py  deposition.py  individual.py
datasets/: .copier-answers.yml  config.py  ext.py  just_for_translations.py  metadata.yaml  model.py  record.yaml  serializers.py
datasets/models/: records.json  ui.json
datasets/records/: api.py
datasets/records/dumpers/: multilingual.py
datasets/records/jsonschemas/: datasets-1.0.0.json
datasets/resources/files/: config.py
datasets/resources/records/: config.py  ui.py
datasets/services/files/: config.py
datasets/services/records/: config.py  facets.py  schema.py  search.py  ui_schema.py
datasets/translations/: messages.pot
docker/: development.crt  development.key  docker-compose.yml
docs/: LLM-CHECKS-README.md  PIPELINE_README.md
fixtures/: catalogue.yaml
i18n/semantic-ui/translations/: package.json
models/: datasets.yaml
sample_data/: dataset.json
scripts/: ccmm_sample.json  create_sample_record.sh  create_sample_requests.sh  initialize.sh  rebuild_index.sh  release-14.0.0a1.sh  release-14.0.0a5.sh  release_from_scratch.sh  sample_record.json  sample_record_full.json
templates/: footer.html  frontpage.html  header.html  page.html  record_requests.html
templates/macros/: card.html
templates/oarepo/invenio_app_rdm/: header_login.html
tests/: permission_test.py
translations/: messages.pot
translations/cs/LC_MESSAGES/: messages.mo  messages.po
translations/en/LC_MESSAGES/: messages.po
ui/datasets/: __init__.py  communities_memberships_dump.py  pids_config_dump.py  webpack.py
(+41 files in other folders)
