[project]
name = "datarepo"
version = "1.0.0"
description = "Catch-All repostitory for Czech scientific data"
packages = []
authors = []
dependencies = [
   "oarepo[s3,rdm]>=14.0.0b1,<15.0.0",
   "oarepo-app[development]>=1.0.0,<2.0.0"
]
requires-python = ">=3.14,<3.15"

[project.entry-points."invenio_assets.webpack"]
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_datasets = "ui.datasets.webpack:theme"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"

[project.entry-points."invenio_db.alembic"]
repository = "common:alembic"

[project.entry-points."invenio_base.blueprints"]
ui_datasets = "ui.datasets:create_blueprint"

[project.entry-points."invenio_base.finalize_app"]
ui_datasets = "ui.datasets:finalize_app"

[tool.uv.build-backend]
module-root = ""
module-name = [
    "common",
    "i18n",
    "ui",
    "datasets",
]

[build-system]
requires = [
    "uv_build>=0.8.7,<0.9.0",
]
build-backend = "uv_build"

[tool.uv.sources]
# Example: oarepo-requests = { path = "/Users/m/w/rdm-13/oarepo-requests", editable=true }
